--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /.pnp
 .pnp.js
+/node_modules
 
 # testing
 /coverage
@@ -19,7 +20,6 @@
 
 # idea settings
 .idea
-/CryptoTrends/.idea 
 
 npm-debug.log*
 yarn-debug.log*
