--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "http-proxy": "^1.17.0",
+    "jest-dom": "^4.0.0",
+    "jest-enzyme": "^7.1.2",
+    "jest-fetch-mock": "^3.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
     "react-native-html-parser": "0.0.5",
     "react-scripts": "^3.4.1",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "react-testing-library": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,7 +34,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "jest-fetch-mock": "^2.1.2"
-  }
+  "devDependencies": {}
 }
